syntax = "proto3";

package demo.chiwoo.helloworld;

option java_multiple_files = true;
option java_package = "demo.chiwoo.armeria.grpc.helloworld";
option java_outer_classname = "HelloProto";
// option objc_class_prefix = "CW";

service HelloService {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc SayHelloLazy (HelloRequest) returns (HelloReply) {}
  rpc SayHelloBlocking (HelloRequest) returns (HelloReply) {}
  rpc SayHelloStreamReply (HelloRequest) returns (stream HelloReply) {}
  rpc SayHelloStreamRequest(stream HelloRequest) returns (HelloReply) {}
  rpc SayHelloStreamBid (stream HelloRequest) returns (stream HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
